<?xml version="1.0" encoding="utf-8"?>
<TableRow xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/items_list_row"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_70dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/store_name_attr"
            android:layout_width="@dimen/size_345dp"
            android:layout_height="@dimen/size_25dp"
            android:layout_gravity="start"
            android:gravity="start"
            android:paddingStart="@dimen/size_10dp"
            android:paddingEnd="@dimen/size_1dp"
            android:paddingTop="@dimen/size_5dp"
            android:text="@string/store_name"
            android:textSize="@dimen/text_size_16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/store_address_details_attr"
            android:layout_width="@dimen/size_345dp"
            android:layout_height="@dimen/size_60dp"
            android:layout_gravity="start"
            android:gravity="start"
            android:paddingStart="@dimen/size_10dp"
            android:text="@string/store_address_details"
            android:textSize="@dimen/text_size_16sp" />

    </LinearLayout>

    <View
        android:layout_width="@dimen/size_0dp"
        android:layout_height="@dimen/size_0dp"
        android:layout_weight="1" />

    <ImageButton
        android:id="@+id/storeActionBtn"
        android:layout_width="@dimen/size_30dp"
        android:layout_height="@dimen/size_30dp"
        android:layout_marginEnd="@dimen/size_10dp"
        android:layout_marginTop="@dimen/size_20dp"
        android:contentDescription="@string/store_action"
        android:src="@drawable/favorite" />

</TableRow>