<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/size_5dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/size_10dp"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/size_15dp">

            <EditText
                android:id="@+id/shop_list_name_et"
                android:layout_width="@dimen/size_250dp"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/save_list_btn"
                android:layout_width="@dimen/size_90dp"
                android:layout_height="@dimen/size_35dp"
                android:layout_marginStart="@dimen/size_5dp"
                android:background="@color/colorPrimary"
                android:text="@string/save_list"
                android:textColor="@color/white" />

        </LinearLayout>

        <TableLayout
            android:id="@+id/items_list_tbl"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="@dimen/size_5dp"
            android:layout_marginStart="@dimen/size_5dp"
            android:visibility="gone">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/cell_border"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="@dimen/size_140dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/cell_shape"
                    android:paddingBottom="@dimen/size_5dp"
                    android:paddingLeft="@dimen/size_10dp"
                    android:paddingRight="@dimen/size_10dp"
                    android:paddingTop="@dimen/size_5dp"
                    android:text="@string/item_name"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size_18sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/cell_shape"
                    android:paddingBottom="@dimen/size_5dp"
                    android:paddingLeft="@dimen/size_10dp"
                    android:paddingRight="@dimen/size_10dp"
                    android:paddingTop="@dimen/size_5dp"
                    android:text="@string/limit"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size_18sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/size_5dp"
                    android:paddingLeft="@dimen/size_10dp"
                    android:paddingRight="@dimen/size_10dp"
                    android:paddingTop="@dimen/size_5dp"
                    android:text="@string/sort_order"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size_18sp"
                    android:textStyle="bold" />

            </TableRow>

        </TableLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/size_10dp"
            android:orientation="horizontal"
            android:paddingTop="@dimen/size_10dp">

            <EditText
                android:id="@+id/item_name"
                android:layout_width="@dimen/size_250dp"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/add_item_btn"
                android:layout_width="@dimen/size_90dp"
                android:layout_height="@dimen/size_35dp"
                android:layout_marginStart="@dimen/size_5dp"
                android:background="@color/colorPrimary"
                android:text="@string/add_item"
                android:textColor="@color/white" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>