<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="@dimen/size_10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="@dimen/size_10dp"
            android:orientation="horizontal"
            android:paddingTop="@dimen/size_5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/size_10dp"
                android:text="Stores Zip Code"
                android:textSize="@dimen/text_size_16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/zip_code_et"
                android:layout_width="@dimen/size_70dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/size_10dp"
                android:inputType="number"
                android:maxLength="5" />

            <View
                android:layout_width="@dimen/size_0dp"
                android:layout_height="@dimen/size_0dp"
                android:layout_weight="1" />

            <Button
                android:id="@+id/search_stores_btn"
                android:layout_width="@dimen/size_120dp"
                android:layout_height="@dimen/size_30dp"
                android:background="@color/colorPrimary"
                android:text="@string/search_stores"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_16sp" />

        </LinearLayout>

        <RelativeLayout
            android:id="@+id/loading_stores_info_rl"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone">

            <ProgressBar
                android:id="@+id/products_loading_pb"
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_100dp"
                android:tooltipText="@string/searching_stores_message" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:background="#00000000"
                android:text="@string/searching_stores_message" />

        </RelativeLayout>

        <TableLayout
            android:id="@+id/store_lists_tbl"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/size_5dp"
            android:layout_marginRight="@dimen/size_5dp"
            android:visibility="gone">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/cell_border"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="@dimen/size_170dp"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/size_5dp"
                    android:paddingLeft="@dimen/size_10dp"
                    android:paddingRight="@dimen/size_10dp"
                    android:paddingTop="@dimen/size_5dp"
                    android:text="@string/searched_stores_details"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size_18sp"
                    android:textStyle="bold" />

            </TableRow>

        </TableLayout>

        <TableLayout
            android:id="@+id/favorite_store_lists_tbl"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/size_5dp"
            android:layout_marginRight="@dimen/size_5dp"
            android:layout_marginTop="@dimen/size_20dp"
            android:visibility="gone">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/cell_border"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="@dimen/size_170dp"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/size_5dp"
                    android:paddingLeft="@dimen/size_10dp"
                    android:paddingRight="@dimen/size_10dp"
                    android:paddingTop="@dimen/size_5dp"
                    android:text="@string/favorite_stores_details"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size_18sp"
                    android:textStyle="bold" />

            </TableRow>

        </TableLayout>

    </LinearLayout>

</ScrollView>